Added Font awesome

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/b27c5e8db6.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,5 +32,6 @@
   <body>
     <h2>I am Lena, a Designer & Frontend Developer</h2>
     <h3>working on Digital Products, Websites and Brands</h3>
+    <i class="fa-solid fa-envelope"></i>
   </body>
 </html>
