--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>I am Lena, a Designer & Frontend Developer</h2>
-    <h3>working on Digital Products, Websites and Brands</h3>
-    <i class="fa-solid fa-envelope"></i>
+    <div class="hero">
+      <h2>I am Lena, a Designer & Frontend Developer</h2>
+      <h3 class="mb-5">working on Digital Products, Websites and Brands</h3>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
