Integrated homepage content design

--- a/index.html
+++ b/index.html
@@ -37,5 +37,93 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <p class="text-center m-5">Featured Projects a choice to show</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/banking.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-2">Banking App</h2>
+            <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes Lorem ipsum dolor sit
+              amet, consectetuer adipiscing elit.
+            </p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-2">Weather App</h2>
+            <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes Lorem ipsum dolor sit
+              amet, consectetuer adipiscing elit.
+            </p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/science.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-2">Science App</h2>
+            <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes Lorem ipsum dolor sit
+              amet, consectetuer adipiscing elit.
+            </p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-2">Magazine</h2>
+            <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes Lorem ipsum dolor sit
+              amet, consectetuer adipiscing elit.
+            </p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/magazine.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/university.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-2">University Website</h2>
+            <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+              commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+              penatibus et magnis dis parturient montes Lorem ipsum dolor sit
+              amet, consectetuer adipiscing elit.
+            </p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
