Added the About content

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
     <link rel="stylesheet" href="styles/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <div class="hero">
-      <h2>I am Lena, a Designer & Frontend Developer</h2>
-      <h3 class="mb-5">working on Digital Products, Websites and Brands</h3>
+      <h1>I am Lena, a Designer & Frontend Developer</h1>
+      <h2 class="mb-5">working on Digital Products, Websites and Brands</h2>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
@@ -45,7 +45,7 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-2">Banking App</h2>
+            <h3 class="mb-2">Banking App</h3>
             <p class="mb-5">
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa. Cum sociis natoque
@@ -59,7 +59,7 @@
       <div class="row mb-5">
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-2">Weather App</h2>
+            <h3 class="mb-2">Weather App</h3>
             <p class="mb-5">
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa. Cum sociis natoque
@@ -79,7 +79,7 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-2">Science App</h2>
+            <h3 class="mb-2">Science App</h3>
             <p class="mb-5">
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa. Cum sociis natoque
@@ -93,7 +93,7 @@
       <div class="row mb-5">
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-2">Magazine</h2>
+            <h3 class="mb-2">Magazine</h3>
             <p class="mb-5">
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa. Cum sociis natoque
@@ -113,7 +113,7 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-2">University Website</h2>
+            <h3 class="mb-2">University Website</h3>
             <p class="mb-5">
               Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
               commodo ligula eget dolor. Aenean massa. Cum sociis natoque
